Completed the hero section and the content section

--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
       <div>
         <h1>Seasons greetings to all!</h1>
         <p>Wishing all who view this webpage a wonderful Christmas full of laughter and love! May your programming endeavours be prosperous in the new year!</p>
+        <button>Sign Up</button>
       </div>
       <img src="images/debby-hudson-QdQEtkscDi8-unsplash.jpg" alt="Christmas stock photo spelling out M-E-R-R-Y" width="450px">
     </div>
   </div>
   <div id="content-container">
-
+    <p>Join the festivities!</p>
+    <div class="logos">
+      <div><img src="images/tree.svg" alt="Image of Christmas Tree"><p>Oh Christmas Tree, Oh Christmas Tree!</p></div>
+      <div><img src="images/globe.svg" alt="Image of Snow Globe"><p>Deck the hells!</p></div>
+      <div><img src="images/candy.svg" alt="Image of Candy Canes"><p>I want candy!</p></div>
+      <div><img src="images/snowman.svg" alt="Image of Snowman"><p>Do you want to build a snowman?!</p></div>
+    </div>
   </div>
   <div id="quote-container">
 
