--- a/index.html
+++ b/index.html
@@ -38,13 +38,24 @@
     </div>
   </div>
   <div id="quote-container">
-
+    <div class="quote">
+      <quote>"Twas the night before Christmas, and all through the house. Not a creature was staring, not even a mouse."</quote>
+      <p>-Clement Clarke Moore</p>
+    </div>
   </div>
   <div id="signup-container">
-
+    <div>
+      <div>
+        <p class="bold">Call to action! It's time!</p>
+        <p>Subscribe for more Christmas themed fun! Click the button to begin!</p>
+      </div>
+      <div>
+        <button>Subcribe</button>
+      </div>
+    </div>
   </div>
   <div id="footer">
-
+    <p>Copyright &copy The Odin Project 2024</p>
   </div>
 </body>
 </html>
